Added lazy load projecti images

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@devas123/ng2-semantic": "^0.10.7",
+    "@giomamaladze/ng2-semantic-ui": "^0.9.9",
     "angular-cli-ghpages": "^0.6.0-rc.2",
+    "ng-semantic-ui-aot": "0.0.5",
     "ng2-semantic-ui": "^0.9.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
